# pypima

./: .gitignore  CHANGES.rst  LICENSE  README.md  main.py  pima.py  pima_split.py  pyproject.toml  raexperiment.py  setup.cfg  setup.py  test.py
aux/: TEMPLATE_pima.cnt  pypima.cfg
db/: db.sql
doc/: DB_description_rus.rst
docs/: DB_description_rus.rst
pypima/: __init__.py  config.py  db.py  fri.py  pima.py  pima_split.py  plot_utils.py  raexperiment.py  tools.py  txt.py  uvfits.py  webinet.py
pypima/data/: __init__.py  raes03eo_l_pima.cnt
pypima/scripts/: __init__.py  pypima_batch.py  pypima_plot_fringe2d.py  pypima_single.py
pypima/tests/: __init__.py  test_fri.py  test_pima.py
pypima/tests/data/: __init__.py  raes03eo_l_RR.fri  raes03eo_l_RR_nobps.fri  raes03eo_l_pima.cnt  raks16nq_c_LL.fri  raks16nq_c_LL_nobps.fri  raks16nq_c_pima.cnt
