[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypima"
description = "Python interface to PIMA"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["astronomy", "astrophysics", "PIMA", "VLBI"]
authors = [{ name = "Petr Voitsik", email = "voitsik@asc.rssi.ru" }]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version"]
dependencies = ["astropy", "matplotlib", "numpy", "pandas", "pycurl", "scipy"]

[project.urls]
Homepage = "https://github.com/voitsik/pypima"

[project.scripts]
# pima_coher = "pypima.scripts.pima_coher:main"
# pima_plot_fringe3d = "pypima.scripts.pima_plot_fringe3d:main"
pypima_batch = "pypima.scripts.pypima_batch:main"
pypima_single = "pypima.scripts.pypima_single:main"

[tool.setuptools.packages.find]
include = ["pypima*"]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "pypima.__version__" }

[tool.ruff.lint]
extend-select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "F",    # Pyflakes
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "NPY",  # NumPy specific rules
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    # "PL",   # pylint
    "PT", # flake8-pytest-style
    # "PTH",  # flake8-use-pathlib
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "D105",   # Missing docstring in magic method
    "SIM108", # if-else-block-instead-of-if-exp
    "RUF059", # unused-unpacked-variable
]
pydocstyle.convention = "numpy"
mccabe.max-complexity = 20

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["pypima/tests"]
