[metadata]
name = pypima
version = attr: pypima.__version__
description = Python interface to PIMA
author = Petr Voitsik
author_email = voitsik@asc.rssi.ru
long_description = file: README.rst
license = MIT
license_file = LICENSE
url = https://github.com/voitsik/pypima
keywords = astronomy, astrophysics, VLBI, PIMA
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy
    Operating System :: OS Independent

[options]
packages = pypima
setup_requires =
    setuptools
install_requires =
    astropy
    matplotlib
    numpy
    pandas
    pycurl
    scipy
tests_require =
    pytest
python_requires = >=3.6
scripts =
    bin/pima_coher.py
    bin/pima_plot_fringe3d.py
    bin/pypima_batch.py
    bin/pypima_single.py
