[metadata]
name = pypima
version = attr: pypima.__version__
description = Python interface to PIMA
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/voitsik/pypima
author = Petr Voitsik
author_email = voitsik@asc.rssi.ru
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
keywords = astronomy, astrophysics, VLBI, PIMA

[options]
packages = pypima
install_requires =
    astropy
    matplotlib
    numpy
    pandas
    pycurl
    scipy
python_requires = >=3.7
scripts =
    bin/pima_coher.py
    bin/pima_plot_fringe3d.py
    bin/pypima_batch.py
    bin/pypima_single.py
setup_requires =
    setuptools
tests_require =
    pytest
